# UbuntuReceivePicture

./: .gitignore
ReceiveSocket/: CMakeLists.txt  H264Decoder.cpp  H264Decoder.h  JPEGDecoder.cpp  JPEGDecoder.h  JPEGEncoder.cpp  JPEGEncoder.h  ReceiveRTP.cpp  ReceiveRTP.h  ReceiveSocket.cpp  ReceiveSocket.h  SendSocket.cpp  SendSocket.h  main.cpp
